samples/_failures_safe/1761461417_3e7a46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ee3c3d3.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_7ee3c3d3.c:153:17: error: expected identifier or ‘(’ at end of input
  153 |                 long
      |                 ^~~~
./samples/SAFE/__tmp_7ee3c3d3.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ee3c3d3.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ee3c3d3.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ee3c3d3.c:153:17: error: expected declaration or statement at end of input
